# Ephie

./: README.md  build.sh  release.sh  run-client.sh  run-server.sh
.github/workflows/: rust.yml
Ephie/: Cargo.toml
Ephie-client/: Cargo.toml
Ephie-client/src/: main.rs
Ephie/src/: main.rs  session.rs  system.rs  test.rs  trie.rs
transport-layer/: Cargo.toml
transport-layer/src/: command.rs  lib.rs
