[package]
name = "ephie-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = ["full"]}
crossterm = "0.27.0"
unicode-width = "0.1.10"
ratatui = "0.24.0"
tui-input = "0.8.0"
